--- a/profile.html
+++ b/profile.html
@@ -5,11 +5,11 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta charset="utf-8">
-      <meta name="description" content="Tổng hợp các liên kết MXH của Nguyễn Khương Duy. Bạn có thể tìm thấy mọi thông tin liên hệ khi truy cập vào">
+      <meta name="description" content="Tổng hợp các liên kết MXH của Aloduaxe. Bạn có thể tìm thấy mọi thông tin liên hệ khi truy cập vào">
       <meta name="keywords" content="website">
       <meta property="og:url" content="https://devteam.io.vn/" />
       <meta property="og:type" content="website" />
-      <meta property="og:title" content="Tổng hợp các liên kết MXH của Nguyễn Khương Duy. Bạn có thể tìm thấy mọi thông tin liên hệ khi truy cập vào" />
+      <meta property="og:title" content="Tổng hợp các liên kết MXH của aloduaxe. Bạn có thể tìm thấy mọi thông tin liên hệ khi truy cập vào" />
       <meta property="og:description" content="website" />
       <meta property="og:image" content="./assets/img/logo.jpg" />
       <!--=============== FAVICON ===============-->
