--- a/profile.html
+++ b/profile.html
@@ -77,6 +77,9 @@
             </div>
             <div class="profile__buttons">
                <!-- Insert your CV -->
+               <a href="https://www.instagram.com/_aloduaxe/" class="button">
+               Instagram <i class="tel"></i>
+               </a>
                <a href="https://www.tiktok.com/@huy_ah004" class="button">
                Tiktok <i class="tel"></i>
                </a>
